[package]
name = "bundler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
colored = "2.1.0"
dirs = "5.0.1"
lazy_static = "1.4.0"
path-absolutize = "3.1.1"
regex = "1.10.4"
serde_json = "1.0.117"
sha = "1.0.3"
swc_atoms = "0.6.7"
swc_bundler = { version = "0.227.0", features = ["concurrent"] }
swc_common = { version = "0.33.26", features = ["tty-emitter"] }
swc_ecma_ast = "0.113.4"
swc_ecma_codegen = "0.149.1"
swc_ecma_loader = "0.45.28"
swc_ecma_parser = "0.144.1"
swc_ecma_transforms_base = "0.138.2"
swc_ecma_transforms_typescript = "0.189.1"
swc_ecma_visit = "0.99.1"
ureq = "2.9.7"
url = "2.5.0"
